Started working on Notification Job
